fix minor chart overflow

--- a/lai_lai/src/common/Modals/AttendanceStatisticsModal/OverallAttendeesAttendance/index.css
+++ b/lai_lai/src/common/Modals/AttendanceStatisticsModal/OverallAttendeesAttendance/index.css
@@ -1,8 +1,11 @@
 .overallAttendeesAttendance {
   width: 100%;
   margin-bottom: 50px;
-  overflow: scroll;
   height: 300px;
+  overflow: scroll;
+}
+
+.overallAttendeesAttendance-container {
   display: flex;
   justify-content: center;
   align-items: center;
